add hero section

--- a/index.html
+++ b/index.html
@@ -33,5 +33,24 @@
         </ul>
     </div>
     </nav>
+    <main>
+      <section class="hero">
+        <div class="container">
+          <div class="profile">
+            <div class="intro-profile">
+              <p>Hello I'm</p>
+              <h1>Alfa Indica Dzoriful Khazim</h1>
+              <h3>Web Developer</h3>
+              <button class="intro-btn">
+                <a href="#about">Get to Know Me</a>
+              </button>
+            </div>
+          </div>
+          <div class="img-profile">
+            <img src="img/alfa.png" alt="">
+          </div>
+        </div>
+      </section>
+    </main>
   </body>
 </html>
