--- a/index.html
+++ b/index.html
@@ -40,14 +40,16 @@
             <div class="intro-profile">
               <p>Hello I'm</p>
               <h1>Alfa Indica Dzoriful Khazim</h1>
-              <h3>Web Developer</h3>
+              <h3>Web Designer & Developer</h3>
               <button class="intro-btn">
                 <a href="#about">Get to Know Me</a>
               </button>
             </div>
           </div>
           <div class="img-profile">
-            <img src="img/alfa.png" alt="">
+            <div class="img-profile2">
+              <img src="img/alfa.png" alt="">
+            </div>
           </div>
         </div>
       </section>
