--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
     <link rel="stylesheet" href="style/style.css" />
   </head>
   <body>
+    <!-- navigation -->
     <nav>
       <div class="nav">
         <div class="logo">
@@ -19,10 +20,10 @@
             <a href="#about-me">About Me</a>
           </div>
           <div class="menu">
-            <a href="#portofolio">Portofolio</a>
+            <a href="#skills">Skills</a>
           </div>
           <div class="menu">
-            <a href="#skills">Skills</a>
+            <a href="#portofolio">Portofolio</a>
           </div>
           <div class="menu">
             <a href="#contacts">Contacts</a>
@@ -34,6 +35,7 @@
     </div>
     </nav>
     <main>
+      <!-- hero section --> 
       <section class="hero">
         <div class="container">
           <div class="profile">
@@ -47,9 +49,25 @@
             </div>
           </div>
           <div class="img-profile">
-            <div class="img-profile2">
               <img src="img/alfa.png" alt="">
-            </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- about section -->
+      <section class="about-me">
+        <div class="container" id="about-me">
+          <div class="about">
+            <h1>About Me </h1><br>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum odit possimus repudiandae 
+              dolorum error asperiores! Id commodi quod illo nesciunt obcaecati sit natus ipsa quis saepe 
+              voluptas qui cumque provident eius delectus deleniti culpa quidem, aperiam veritatis voluptatum 
+              itaque autem ratione nam ex doloribus! Dicta voluptate fugiat quo molestiae quasi similique quae 
+              iusto itaque iure ipsam? In voluptatibus consequuntur recusandae totam sit reiciendis molestias, 
+              suscipit consequatur, porro obcaecati velit reprehenderit ex alias mollitia nihil est qui id, 
+              voluptatem deserunt nesciunt. Nemo ex perferendis aspernatur. Repudiandae quibusdam iure suscipit 
+              exercitationem architecto ea, reiciendis veritatis velit. Possimus quae minima repudiandae ex tempora.
+            </p>
           </div>
         </div>
       </section>
