--- a/index.html
+++ b/index.html
@@ -44,7 +44,7 @@
               <h1>Alfa Indica Dzoriful Khazim</h1>
               <h3>Web Designer & Developer</h3>
               <button class="intro-btn">
-                <a href="#about">Get to Know Me</a>
+                <a href="#about-me">Get to Know Me</a>
               </button>
             </div>
           </div>
@@ -58,7 +58,7 @@
       <section class="about-me">
         <div class="container" id="about-me">
           <div class="about">
-            <h1>About Me </h1><br>
+            <h1 class="heading-section">About Me </h1><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum odit possimus repudiandae 
               dolorum error asperiores! Id commodi quod illo nesciunt obcaecati sit natus ipsa quis saepe 
               voluptas qui cumque provident eius delectus deleniti culpa quidem, aperiam veritatis voluptatum 
@@ -68,6 +68,63 @@
               voluptatem deserunt nesciunt. Nemo ex perferendis aspernatur. Repudiandae quibusdam iure suscipit 
               exercitationem architecto ea, reiciendis veritatis velit. Possimus quae minima repudiandae ex tempora.
             </p>
+          </div>
+        </div>
+      </section>
+
+      <!-- Skills section -->
+      <section class="skills">
+        <div class="container" id="skills">
+          <h1 class="heading-section">Skills</h1>
+          <div class="list-box">
+            <div class="box box-1">
+              <img src="img/html.svg" alt="html-logo">
+              <div class="skill-box">
+                <h1>HTML</h1>
+              </div>
+            </div>
+            <div class="box box-2">
+              <img src="img/css.svg" alt="html-logo">
+              <div class="skill-box">
+                <h1>CSS</h1>
+              </div>
+            </div>
+            <div class="box box-3">
+              <img src="img/bootstrap.png" alt="html-logo">
+              <div class="skill-box">
+                <h1>BOOTSTRAP</h1>
+              </div>
+            </div>
+            <div class="box box-4">
+              <img src="img/php.png" alt="html-logo">
+              <div class="skill-box">
+                <h1>PHP</h1>
+              </div>
+            </div>
+            <div class="box box-5">
+              <img src="img/laravel.svg" alt="html-logo">
+              <div class="skill-box">
+                <h1>LARAVEL</h1>
+              </div>
+            </div>
+            <div class="box box-6">
+              <img src="img/js.svg" alt="html-logo">
+              <div class="skill-box">
+                <h1>JAVASCRIPT</h1>
+              </div>
+            </div>
+            <div class="box box-7">
+              <img src="img/github.svg" alt="html-logo">
+              <div class="skill-box">
+                <h1>GITHUB</h1>
+              </div>
+            </div>
+            <div class="box box-8">
+              <img src="img/figma.png" alt="html-logo">
+              <div class="skill-box">
+                <h1>FIGMA</h1>
+              </div>
+            </div>
           </div>
         </div>
       </section>
