--- a/index.html
+++ b/index.html
@@ -5,6 +5,10 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfa Indica Dzoriful Khazim</title>
     <link rel="stylesheet" href="style/style.css" />
+
+    <!-- Bootstrap Icons CSS -->
+    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
+
   </head>
   <body>
     <!-- navigation -->
@@ -23,7 +27,7 @@
             <a href="#skills">Skills</a>
           </div>
           <div class="menu">
-            <a href="#portofolio">Portofolio</a>
+            <a href="#projects">Projects</a>
           </div>
           <div class="menu">
             <a href="#contacts">Contacts</a>
@@ -127,6 +131,76 @@
             </div>
           </div>
         </div>
+      </section>
+
+      <!-- projects section -->
+      <section class="projects" id="projects">
+        <div class="container">
+          <h1 class="heading-section">Projects</h1>
+          <div class="carousel-container">
+              <div class="projects-slide" id="slide1">
+                <div class="projects-box">
+                  <div class="project-img">
+                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
+                  </div>
+                  <div class="project-desc"> 
+                    <div class="project-heading">
+                      <h1>PROJECT 1</h1>
+                      <i class="bi bi-box-arrow-in-up-right"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="projects-slide" id="slide1">
+                <div class="projects-box">
+                  <div class="project-img">
+                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
+                  </div>
+                  <div class="project-desc"> 
+                    <div class="project-heading">
+                      <h1>PROJECT 1</h1>
+                      <i class="bi bi-box-arrow-in-up-right"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="projects-slide" id="slide1">
+                <div class="projects-box">
+                  <div class="project-img">
+                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
+                  </div>
+                  <div class="project-desc"> 
+                    <div class="project-heading">
+                      <h1>PROJECT 1</h1>
+                      <i class="bi bi-box-arrow-in-up-right"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
+                  </div>
+                </div>
+              </div>
+              <div class="projects-slide" id="slide1">
+                <div class="projects-box">
+                  <div class="project-img">
+                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
+                  </div>
+                  <div class="project-desc"> 
+                    <div class="project-heading">
+                      <h1>PROJECT 1</h1>
+                      <i class="bi bi-box-arrow-in-up-right"></i>
+                    </div>
+                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
+                  </div>
+                </div>
+              </div>
+          </div>
+        </div>
+      </section>
+
+      <!-- contacts section -->
+      <section class="contacts">
+        <div class="container"></div>
       </section>
     </main>
   </body>
