change projects section style

--- a/index.html
+++ b/index.html
@@ -135,73 +135,37 @@
 
       <!-- projects section -->
       <section class="projects" id="projects">
-        <div class="container">
-          <h1 class="heading-section">Projects</h1>
-          <div class="carousel-container">
-              <div class="projects-slide" id="slide1">
-                <div class="projects-box">
-                  <div class="project-img">
-                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
-                  </div>
-                  <div class="project-desc"> 
-                    <div class="project-heading">
-                      <h1>PROJECT 1</h1>
-                      <i class="bi bi-box-arrow-in-up-right"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
-                  </div>
+        <h1 class="heading-section">Projects</h1>
+        <div class="carousel-container">
+          <div class="carousel-slide">
+            <div class="carousel-item">
+              <div class="projects-box">
+                <img src="img/edulearn.jpg" alt="edulearn-project">
+                <div class="project-desc">
+                  <h2>Web Design</h2>
+                  <h1>Dummy project - Edulearn</h1>
+                  <a href="" class="view-project">View Projects</a>
+                  <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
+                    With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
+                    allowing them to explore various coureses and categories. From featured courses to discussion forums,
+                    EduLearn provides learners with the tools to develop skills and knowledge in a flexible and immersive way.
+                  </p>
                 </div>
               </div>
-              <div class="projects-slide" id="slide1">
-                <div class="projects-box">
-                  <div class="project-img">
-                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
-                  </div>
-                  <div class="project-desc"> 
-                    <div class="project-heading">
-                      <h1>PROJECT 1</h1>
-                      <i class="bi bi-box-arrow-in-up-right"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="projects-slide" id="slide1">
-                <div class="projects-box">
-                  <div class="project-img">
-                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
-                  </div>
-                  <div class="project-desc"> 
-                    <div class="project-heading">
-                      <h1>PROJECT 1</h1>
-                      <i class="bi bi-box-arrow-in-up-right"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
-                  </div>
-                </div>
-              </div>
-              <div class="projects-slide" id="slide1">
-                <div class="projects-box">
-                  <div class="project-img">
-                    <img src="img/edulearn.jpg" alt="EduLearn Porject">
-                  </div>
-                  <div class="project-desc"> 
-                    <div class="project-heading">
-                      <h1>PROJECT 1</h1>
-                      <i class="bi bi-box-arrow-in-up-right"></i>
-                    </div>
-                    <p>Lorem ipsum dolor sit amet consectetur, adipisicing elit. Tempore incidunt quae inventore voluptatibus voluptas cumque, laborum libero iure hic! Vitae.</p>
-                  </div>
-                </div>
-              </div>
+            </div>
+            <button class="next-btn"><i class="bi bi-arrow-right"></i></button>
+            <button class="prev-btn"><i class="bi bi-arrow-left"></i></button>
           </div>
         </div>
       </section>
+      
 
       <!-- contacts section -->
       <section class="contacts">
         <div class="container"></div>
       </section>
     </main>
+
+    <script src="js/script.js"></script>
   </body>
 </html>
