make carousel project

--- a/index.html
+++ b/index.html
@@ -138,9 +138,11 @@
         <h1 class="heading-section">Projects</h1>
         <div class="carousel-container">
           <div class="carousel-slide">
-            <div class="carousel-item">
+            <div class="carousel-item" id="slide1">
               <div class="projects-box">
-                <img src="img/edulearn.jpg" alt="edulearn-project">
+                <div class="project-img">
+                  <img src="img/edulearn.jpg" alt="edulearn-project">
+                </div>
                 <div class="project-desc">
                   <h2>Web Design</h2>
                   <h1>Dummy project - Edulearn</h1>
@@ -153,9 +155,82 @@
                 </div>
               </div>
             </div>
-            <button class="next-btn"><i class="bi bi-arrow-right"></i></button>
-            <button class="prev-btn"><i class="bi bi-arrow-left"></i></button>
+            <div class="carousel-item" id="slide2">
+              <div class="projects-box">
+                <div class="project-img">
+                  <img src="img/wireframe-cashier-app.jpg" alt="wireframe-cashier-app">
+                </div>
+                <div class="project-desc">
+                  <h2>Web Design</h2>
+                  <h1>Wireframe Cashier App</h1>
+                  <a href="" class="view-project">View Projects</a>
+                  <p>Cashier application that will be used by cashiers to facilitate cashiers in serving buyers this application has features 
+                    Menu that will display food and drinks that are sold
+                    Orders, used to add buyer orders
+                    Order History, View all buyer orders
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" id="slide3">
+              <div class="projects-box">
+                <div class="project-img">
+                  <img src="img/Mockup Alphones.png" alt="Mockup Alphones">
+                </div>
+                <div class="project-desc">
+                  <h2>Web Design</h2>
+                  <h1>E-commerce Mobile Application UI Design</h1>
+                  <a href="" class="view-project">View Projects</a>
+                  <p>An e-commerce mobile application designed to make it easier for users to buy mobile phones online. The main goal of this UI design is to create an intuitive, attractive, and safe experience for users with a user segment of 25-30 years old with the appearance of a mobile phone.
+                    Register User
+                    User profile
+                    Product catalogue
+                    Shopping cart
+                    Payment
+                    Delivery status
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" id="slide4">
+              <div class="projects-box">
+                <div class="project-img">
+                  <img src="img/laravel online store.jpg" alt="online store laravel">
+                </div>
+                <div class="project-desc">
+                  <h2>Web App</h2>
+                  <h1>Online Store Laravel</h1>
+                  <a href="" class="view-project">View Projects</a>
+                  <p>Developing a Laravel-based website for the final project of the Web Framework Programming course with 
+                    feature:
+                     login/register
+                     Home, Main page
+                     Products, Products sold in the online store
+                     Cart, User's shopping basket
+                  </p>
+                </div>
+              </div>
+            </div>
+            <div class="carousel-item" id="slide5">
+              <div class="projects-box">
+                <div class="project-img">
+                  <img src="img/pemapistock.png" alt="pemapistock-stock app">
+                </div>
+                <div class="project-desc">
+                  <h2>Web App</h2>
+                  <h1>PemapiStock - Stock App with Laravel</h1>
+                  <a href="" class="view-project">View Projects</a>
+                  <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
+                    With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
+                    allowing them to explore various coureses and categories. From featured courses to discussion forums,
+                    EduLearn provides learners with the tools to develop skills and knowledge in a flexible and immersive way.
+                  </p>
+                </div>
+              </div>
+            </div>
           </div>
+          <button class="next-btn" id="next-btn"><i class="bi bi-arrow-right"></i></button>
+          <button class="prev-btn" id="prev-btn"><i class="bi bi-arrow-left"></i></button>
         </div>
       </section>
       
