contacts section & footer

--- a/index.html
+++ b/index.html
@@ -146,7 +146,7 @@
                 <div class="project-desc">
                   <h2>Web Design</h2>
                   <h1>Dummy project - Edulearn</h1>
-                  <a href="" class="view-project">View Projects</a>
+                  <a href="https://www.figma.com/file/UjZmQGRESyylJaZzHr5bxB/EduLearn?type=design&node-id=0%3A1&mode=design&t=0kCayCJFuy5TRTtO-1" target="_blank" class="view-project">View Projects</a>
                   <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
                     With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
                     allowing them to explore various coureses and categories. From featured courses to discussion forums,
@@ -163,7 +163,7 @@
                 <div class="project-desc">
                   <h2>Web Design</h2>
                   <h1>Wireframe Cashier App</h1>
-                  <a href="" class="view-project">View Projects</a>
+                  <a href="https://www.figma.com/file/rYp5YuuSptmzS1fNQNAfbH/Projek-Tubes-Mobile?type=design&node-id=0%3A1&mode=design&t=KU1UvVAvifVNX84N-1" target="_blank" class="view-project">View Projects</a>
                   <p>Cashier application that will be used by cashiers to facilitate cashiers in serving buyers this application has features 
                     Menu that will display food and drinks that are sold
                     Orders, used to add buyer orders
@@ -180,7 +180,7 @@
                 <div class="project-desc">
                   <h2>Web Design</h2>
                   <h1>E-commerce Mobile Application UI Design</h1>
-                  <a href="" class="view-project">View Projects</a>
+                  <a href="https://www.figma.com/file/5NS9aIgVXUhnB09D2Z1TUp/Tugas-Akhir-UIUX_IK1A_3.34.21.0.04_Alfa-Indica?type=design&node-id=0%3A1&mode=design&t=JFs1WKlo1GTFyWCF-1" target="_blank" class="view-project">View Projects</a>
                   <p>An e-commerce mobile application designed to make it easier for users to buy mobile phones online. The main goal of this UI design is to create an intuitive, attractive, and safe experience for users with a user segment of 25-30 years old with the appearance of a mobile phone.
                     Register User
                     User profile
@@ -200,7 +200,7 @@
                 <div class="project-desc">
                   <h2>Web App</h2>
                   <h1>Online Store Laravel</h1>
-                  <a href="" class="view-project">View Projects</a>
+                  <a href="https://github.com/Indicartans/Laravel_OnlineStore" target="_blank" class="view-project">View Projects</a>
                   <p>Developing a Laravel-based website for the final project of the Web Framework Programming course with 
                     feature:
                      login/register
@@ -219,7 +219,7 @@
                 <div class="project-desc">
                   <h2>Web App</h2>
                   <h1>PemapiStock - Stock App with Laravel</h1>
-                  <a href="" class="view-project">View Projects</a>
+                  <a href="https://github.com/Indicartans/Pemapistock_stock-app-laravel" target="_blank" class="view-project">View Projects</a>
                   <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
                     With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
                     allowing them to explore various coureses and categories. From featured courses to discussion forums,
@@ -236,10 +236,40 @@
       
 
       <!-- contacts section -->
-      <section class="contacts">
-        <div class="container"></div>
+      <section class="contacts" id="contacts">
+        <div class="container">
+          <div class="contacts-heading">
+            <h1 class="heading-section">Contacts</h1>
+          </div>
+          <div class="content">
+            <div class="contacts-content">
+              <p>I'd love to hear from you! If you have any questions, suggestions, or would like to collaborate, 
+                please feel free to contact me. I am available via email, and you can also follow my latest 
+                developments on social media. I am committed to responding as quickly as possible. Thank you for 
+                visiting my portfolio, and I look forward to speaking with you soon!
+              </p>
+              <div class="sosmed-icons">
+                <a href="mailto:indica464@gmail.com" target="_blank">
+                  <i class="bi bi-envelope-at"> indica464@gmail.com</i>
+                </a>
+                <a href="https://instagram.com/alfaindicadz" target="_blank">
+                  <i class="bi bi-instagram"> alfaindicadz</i> 
+                </a>
+                <a href="https://www.linkedin.com/in/alfaindica/" target="_blank">
+                  <i class="bi bi-linkedin"> Alfa Indica Dzoriful Khazim</i>
+                </a>
+              </div>
+            </div>
+          </div>
+        </div>
       </section>
     </main>
+
+    <footer>
+      <div class="footer">
+        <p>Created by <a href="https://instagram.com/alfaindica" target="_blank">alfaindicadz</a> | &copy; 2023 Copyright Reserved</p>
+      </div>
+    </footer>
 
     <script src="js/script.js"></script>
   </body>
