--- a/index.html
+++ b/index.html
@@ -43,25 +43,20 @@
       <section class="hero">
         <div class="container">
           <div class="profile">
-            <div class="intro-profile">
-              <p>Hello I'm</p>
-              <h1>Alfa Indica Dzoriful Khazim</h1>
-              <h3>Web Designer & Developer</h3>
-              <button class="intro-btn">
-                <a href="#about-me">Get to Know Me</a>
-              </button>
-            </div>
+            <p>Hello I'm</p>
+            <h1>Alfa Indica Dzoriful Khazim</h1>
+            <p>Web Designer & Developer</p>
+            <a href="#about-me">Get to Know me</a>
           </div>
           <div class="img-profile">
-              <img src="img/alfa.png" alt="">
+            <img src="img/alfa.png" alt="alfa-profile-image">
           </div>
         </div>
       </section>
 
       <!-- about section -->
-      <section class="about-me">
-        <div class="container" id="about-me">
-          <div class="about">
+      <section class="about-me" id="about-me">
+        <div class="container">
             <h1 class="heading-section">About Me </h1><br>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum odit possimus repudiandae 
               dolorum error asperiores! Id commodi quod illo nesciunt obcaecati sit natus ipsa quis saepe 
@@ -72,13 +67,12 @@
               voluptatem deserunt nesciunt. Nemo ex perferendis aspernatur. Repudiandae quibusdam iure suscipit 
               exercitationem architecto ea, reiciendis veritatis velit. Possimus quae minima repudiandae ex tempora.
             </p>
-          </div>
         </div>
       </section>
 
       <!-- Skills section -->
-      <section class="skills">
-        <div class="container" id="skills">
+      <section class="skills" id="skills">
+        <!-- <div class="container" id="skills">
           <h1 class="heading-section">Skills</h1>
           <div class="list-box">
             <div class="box box-1">
@@ -130,11 +124,41 @@
               </div>
             </div>
           </div>
+        </div> -->
+        <div class="container">
+          <h1 class="heading-section">Skills</h1>
+          <div class="skill-list">
+            <div class="skill">
+              <img src="img/html.svg" alt="html-logo">
+            </div>
+            <div class="skill">
+              <img src="img/css.svg" alt="css-logo">
+            </div>
+            <div class="skill">
+              <img src="img/bootstrap.png" alt="bootstrap-logo">
+            </div>
+            <div class="skill">
+              <img src="img/php.png" alt="php-logo">
+            </div>
+            <div class="skill">
+              <img src="img/laravel.svg" alt="laravel-logo">
+            </div>
+            <div class="skill">
+              <img src="img/js.svg" alt="javascript-logo">
+            </div>
+            <div class="skill">
+              <img src="img/github.svg" alt="github-logo">
+            </div>
+            <div class="skill">
+              <img src="img/figma.png" alt="figma-logo">
+            </div>
+          </div>
         </div>
       </section>
 
       <!-- projects section -->
       <section class="projects" id="projects">
+        <div class="container">
         <h1 class="heading-section">Projects</h1>
         <div class="carousel-container">
           <div class="carousel-slide">
@@ -232,6 +256,7 @@
           <button class="next-btn" id="next-btn"><i class="bi bi-arrow-right"></i></button>
           <button class="prev-btn" id="prev-btn"><i class="bi bi-arrow-left"></i></button>
         </div>
+      </div>
       </section>
       
 
