--- a/index.html
+++ b/index.html
@@ -57,74 +57,17 @@
       <!-- about section -->
       <section class="about-me" id="about-me">
         <div class="container">
-            <h1 class="heading-section">About Me </h1><br>
-            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Harum odit possimus repudiandae 
-              dolorum error asperiores! Id commodi quod illo nesciunt obcaecati sit natus ipsa quis saepe 
-              voluptas qui cumque provident eius delectus deleniti culpa quidem, aperiam veritatis voluptatum 
-              itaque autem ratione nam ex doloribus! Dicta voluptate fugiat quo molestiae quasi similique quae 
-              iusto itaque iure ipsam? In voluptatibus consequuntur recusandae totam sit reiciendis molestias, 
-              suscipit consequatur, porro obcaecati velit reprehenderit ex alias mollitia nihil est qui id, 
-              voluptatem deserunt nesciunt. Nemo ex perferendis aspernatur. Repudiandae quibusdam iure suscipit 
-              exercitationem architecto ea, reiciendis veritatis velit. Possimus quae minima repudiandae ex tempora.
-            </p>
-        </div>
+            <h1 class="heading-section">About Me </h1>
+            <p>Saya adalah seorang mahasiswa teknik informatika yang memiliki keahlian pada pengembangan dan desain web. Saya telah mendalami bidang pengembangan dan desain web selama
+            3 tahun di bangku perkuliahan dan memiliki minat untuk terus belajar dan berkembang. Dengan minat yang tinggi untuk terus belajar dan berkembang
+          memungkinkan saya memberikan solusi yang tepat dan sesuai dengan tren industri. Terlepas dari keahlian profesional saya, saya juga senang menggali kreativitas dalam proyek pribadi. 
+          Saya percaya bahwa seni dan desain dapat menjadi sumber inspirasi yang kuat, dan saya selalu mencari cara untuk menggabungkan elemen-elemen ini dalam pekerjaan saya. Saya berharap
+        dapat bekerja sama dengan Anda untuk mengubah ide dan visi menjadi pengalaman web yang luar biasa. Jangan ragu untuk menghubungi saya untuk diskusi lebih lanjut</p>
+            </div>
       </section>
 
       <!-- Skills section -->
       <section class="skills" id="skills">
-        <!-- <div class="container" id="skills">
-          <h1 class="heading-section">Skills</h1>
-          <div class="list-box">
-            <div class="box box-1">
-              <img src="img/html.svg" alt="html-logo">
-              <div class="skill-box">
-                <h1>HTML</h1>
-              </div>
-            </div>
-            <div class="box box-2">
-              <img src="img/css.svg" alt="html-logo">
-              <div class="skill-box">
-                <h1>CSS</h1>
-              </div>
-            </div>
-            <div class="box box-3">
-              <img src="img/bootstrap.png" alt="html-logo">
-              <div class="skill-box">
-                <h1>BOOTSTRAP</h1>
-              </div>
-            </div>
-            <div class="box box-4">
-              <img src="img/php.png" alt="html-logo">
-              <div class="skill-box">
-                <h1>PHP</h1>
-              </div>
-            </div>
-            <div class="box box-5">
-              <img src="img/laravel.svg" alt="html-logo">
-              <div class="skill-box">
-                <h1>LARAVEL</h1>
-              </div>
-            </div>
-            <div class="box box-6">
-              <img src="img/js.svg" alt="html-logo">
-              <div class="skill-box">
-                <h1>JAVASCRIPT</h1>
-              </div>
-            </div>
-            <div class="box box-7">
-              <img src="img/github.svg" alt="html-logo">
-              <div class="skill-box">
-                <h1>GITHUB</h1>
-              </div>
-            </div>
-            <div class="box box-8">
-              <img src="img/figma.png" alt="html-logo">
-              <div class="skill-box">
-                <h1>FIGMA</h1>
-              </div>
-            </div>
-          </div>
-        </div> -->
         <div class="container">
           <h1 class="heading-section">Skills</h1>
           <div class="skill-list">
@@ -171,10 +114,10 @@
                   <h2>Web Design</h2>
                   <h1>Dummy project - Edulearn</h1>
                   <a href="https://www.figma.com/file/UjZmQGRESyylJaZzHr5bxB/EduLearn?type=design&node-id=0%3A1&mode=design&t=0kCayCJFuy5TRTtO-1" target="_blank" class="view-project">View Projects</a>
-                  <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
-                    With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
-                    allowing them to explore various coureses and categories. From featured courses to discussion forums,
-                    EduLearn provides learners with the tools to develop skills and knowledge in a flexible and immersive way.
+                  <p>EduLearn adalah aplikasi pendidikan yang memberikan pengalaman belajar yang interaktif dan inspiratif.
+                    Dengan antarmuka yang ramah pengguna, pengguna akan disambut dengan kutipan-kutipan inspiratif dan navigasi yang mudah,
+                    yang memungkinkan mereka untuk menjelajahi berbagai kursus dan kategori. Dari kursus unggulan hingga forum diskusi,
+                    EduLearn menyediakan alat bagi pelajar untuk mengembangkan keterampilan dan pengetahuan dengan cara yang fleksibel dan mendalam.
                   </p>
                 </div>
               </div>
@@ -188,10 +131,10 @@
                   <h2>Web Design</h2>
                   <h1>Wireframe Cashier App</h1>
                   <a href="https://www.figma.com/file/rYp5YuuSptmzS1fNQNAfbH/Projek-Tubes-Mobile?type=design&node-id=0%3A1&mode=design&t=KU1UvVAvifVNX84N-1" target="_blank" class="view-project">View Projects</a>
-                  <p>Cashier application that will be used by cashiers to facilitate cashiers in serving buyers this application has features 
-                    Menu that will display food and drinks that are sold
-                    Orders, used to add buyer orders
-                    Order History, View all buyer orders
+                  <p>Aplikasi kasir yang akan digunakan oleh kasir untuk memudahkan kasir dalam melayani pembeli. Aplikasi ini memiliki fitur 
+                    Menu yang akan menampilkan makanan dan minuman yang dijual
+                    Pesanan, digunakan untuk menambah pesanan pembeli
+                    Riwayat Pesanan, Melihat semua pesanan pembeli
                   </p>
                 </div>
               </div>
@@ -205,13 +148,14 @@
                   <h2>Web Design</h2>
                   <h1>E-commerce Mobile Application UI Design</h1>
                   <a href="https://www.figma.com/file/5NS9aIgVXUhnB09D2Z1TUp/Tugas-Akhir-UIUX_IK1A_3.34.21.0.04_Alfa-Indica?type=design&node-id=0%3A1&mode=design&t=JFs1WKlo1GTFyWCF-1" target="_blank" class="view-project">View Projects</a>
-                  <p>An e-commerce mobile application designed to make it easier for users to buy mobile phones online. The main goal of this UI design is to create an intuitive, attractive, and safe experience for users with a user segment of 25-30 years old with the appearance of a mobile phone.
-                    Register User
-                    User profile
-                    Product catalogue
-                    Shopping cart
-                    Payment
-                    Delivery status
+                  <p>Aplikasi mobile e-commerce yang dirancang untuk memudahkan pengguna membeli ponsel secara online. Tujuan utama dari desain UI ini adalah untuk menciptakan pengalaman yang intuitif, menarik, dan aman bagi pengguna dengan segmen pengguna berusia 25-30 tahun dengan tampilan ponsel.
+                    Daftarkan Pengguna
+                    Profil pengguna
+                    Katalog produk
+                    Keranjang belanja
+                    Pembayaran
+                    Status pengiriman
+
                   </p>
                 </div>
               </div>
@@ -225,12 +169,12 @@
                   <h2>Web App</h2>
                   <h1>Online Store Laravel</h1>
                   <a href="https://github.com/Indicartans/Laravel_OnlineStore" target="_blank" class="view-project">View Projects</a>
-                  <p>Developing a Laravel-based website for the final project of the Web Framework Programming course with 
-                    feature:
-                     login/register
-                     Home, Main page
-                     Products, Products sold in the online store
-                     Cart, User's shopping basket
+                  <p>Mengembangkan website berbasis Laravel untuk tugas akhir mata kuliah Pemrograman Web Framework dengan 
+                    fitur
+                     login/registrasi
+                     Beranda, Halaman utama
+                     Produk, Produk yang dijual di toko online
+                     Troli, Keranjang belanja pengguna
                   </p>
                 </div>
               </div>
@@ -244,10 +188,9 @@
                   <h2>Web App</h2>
                   <h1>PemapiStock - Stock App with Laravel</h1>
                   <a href="https://github.com/Indicartans/Pemapistock_stock-app-laravel" target="_blank" class="view-project">View Projects</a>
-                  <p>EduLearn is an educational app that provides an interactive and inspiring learning experience.
-                    With a user-friendly interface, users are greeted with inspirational quotes and easy navigation,
-                    allowing them to explore various coureses and categories. From featured courses to discussion forums,
-                    EduLearn provides learners with the tools to develop skills and knowledge in a flexible and immersive way.
+                  <p>PemapiStock adalah sebuah aplikasi berbasis website yang saya kerjakan pada saat saya magang di PT. Coco Profire Indonesia. Aplikasi
+                    ini digunakan untuk mempermudah karyawan dalam melihat stock barang yang ada. Dalam aplikasi ini terdapat fitur Jumlah barang yang tersedia, Jumlah
+                    barang masuk dan keluar, serta membuat sebuah produk baru dari material yang ada
                   </p>
                 </div>
               </div>
@@ -268,10 +211,10 @@
           </div>
           <div class="content">
             <div class="contacts-content">
-              <p>I'd love to hear from you! If you have any questions, suggestions, or would like to collaborate, 
-                please feel free to contact me. I am available via email, and you can also follow my latest 
-                developments on social media. I am committed to responding as quickly as possible. Thank you for 
-                visiting my portfolio, and I look forward to speaking with you soon!
+              <p>Saya ingin sekali mendengar pendapat Anda! Jika Anda memiliki pertanyaan, saran, atau ingin berkolaborasi, 
+                jangan ragu untuk menghubungi saya. Saya dapat dihubungi melalui email, dan Anda juga dapat mengikuti 
+                perkembangan terbaru saya di media sosial. Saya berkomitmen untuk merespon secepat mungkin. Terima kasih 
+                telah mengunjungi portofolio saya, dan saya berharap dapat segera berbicara dengan Anda!
               </p>
               <div class="sosmed-icons">
                 <a href="mailto:indica464@gmail.com" target="_blank">
