--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Alfa Indica Dzoriful Khazim</title>
     <link rel="stylesheet" href="style/style.css" />
+    <link rel="icon" type="image/png" href="img/icon.svg" />
 
     <!-- Bootstrap Icons CSS -->
     <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap-icons@1.11.2/font/bootstrap-icons.min.css">
