--- a/index.html
+++ b/index.html
@@ -21,14 +21,20 @@
         <h4>Alfa Indica Dzoriful Khazim</h4>
       </div>
       <ul>
-        <li><a href="#about-me">About me</a></li>
-        <li><a href="#skills">Skills</a></li>
-        <li><a href="#projects">Projects</a></li>
-        <li><a href="#contacts">Contacts</a></li>
-        <li><a href="">Resume</a></li>
+        <li><a href="#about-me" class="nav">About me</a></li>
+        <li><a href="#skills" class="nav">Skills</a></li>
+        <li><a href="#projects" class="nav">Projects</a></li>
+        <li><a href="#contacts" class="nav">Contacts</a></li>
+        <li>
+          <a
+            href="https://drive.google.com/file/d/1QsZLnNCJ8LtSyXQLUf4GtNvHw-FWD6w_/view?usp=sharing"
+            target="_blank"
+            >Resume</a
+          >
+        </li>
       </ul>
 
-      <button><i class="bi bi-list"></i></button>
+      <button class="hamburger"><i class="bi bi-list"></i></button>
     </nav>
     <main>
       <!-- hero section -->
@@ -38,7 +44,11 @@
             <p>Hello I'm</p>
             <h1>Alfa Indica Dzoriful Khazim</h1>
             <p>Web Designer & Developer</p>
-            <a href="#about-me">Get to Know me</a>
+            <a
+              href="https://drive.google.com/file/d/1QsZLnNCJ8LtSyXQLUf4GtNvHw-FWD6w_/view?usp=sharing"
+              target="_blank"
+              >Curriculum Vitae</a
+            >
           </div>
           <div class="img-profile">
             <img src="img/alfa.png" alt="alfa-profile-image" />
